Add AbstractInferenceTask pipeline, migrate all tasks, add Getting Started
Introduce AbstractInferenceTask<I,O> with final run() enforcing the
preprocess → infer → postprocess pipeline. InferenceContext<I> carries
cross-stage data (original input, preprocessed tensors, output tensors).

Migrate 9/10 task wrappers:
- Vision: AbstractImageClassifier, ResNet, EfficientNet, YoloV8, Yolo26, CRAFT
- NLP: DistilBERT, SentenceTransformer, MiniLMSearchReranker
- Audio: Wav2Vec2

SearchReranker now extends InferenceTask<QueryDocumentPair, Float> with
score/scoreBatch as default methods. MiniLMSearchReranker extends
AbstractInferenceTask like every other task.

SileroVadDetector is the sole exception (stateful model with N session.run
calls per input, documented in Javadoc).

Add Getting Started section to README with dependency coordinates and
a copy-pasteable quickstart example.